# parakeet-writer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  package.nix
src/: audio.rs  event_loop.rs  input.rs  main.rs  model.rs  output.rs  post_process.rs
