[package]
name = "parakeet-writer"
version = "0.1.0"
edition = "2021"
authors = ["Martin Trojer <martin.trojer@gmail.com>"]
description = "Minimal push-to-talk transcriber using Parakeet v3"

[dependencies]
hotkey-listener = "0.2"
transcribe-rs = { version = "=0.2.2", features = ["parakeet"] }
cpal = "0.15"
hound = "3.5"
env_logger = "0.10"
log = "0.4"
tempfile = "3"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
dirs = "5"
reqwest = { version = "0.12", features = ["stream"] }
flate2 = "1"
tar = "0.4"
futures-util = "0.3"

# Pin ort versions to match transcribe-rs 0.2.2 requirements
ort = "=2.0.0-rc.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "process", "time"] }
ollama-rs = "0.3"

